--- a/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-07 13:45+0000\n"
+"POT-Creation-Date: 2018-08-09 15:24+0000\n"
 "PO-Revision-Date: 2018-06-05 13:42+0000\n"
 "Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-js/"
@@ -298,15 +298,25 @@ msgid "Waiting list"
 msgstr "Wachtlijst"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
+#, fuzzy
+#| msgctxt "widget"
+#| msgid ""
+#| "You currently have an active cart for this event. If you select more "
+#| "products, they will be added to your existing cart. Click on this message "
+#| "to continue checkout with your cart."
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
-"products, they will be added to your existing cart. Click on this message to "
-"continue checkout with your cart."
+"products, they will be added to your existing cart."
 msgstr ""
 "U heeft momenteel een actieve winkelwagen voor dit evenement. Als u meer "
 "producten selecteert worden deze toegevoegd aan uw bestaande winkelwagen. "
 "Klik op dit bericht om verder te gaan met uw winkelwagen."
+
+#: pretix/static/pretixpresale/js/widget/widget.js:25
+msgctxt "widget"
+msgid "Resume checkout"
+msgstr ""
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
