--- a/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-07 13:45+0000\n"
+"POT-Creation-Date: 2018-08-09 15:24+0000\n"
 "PO-Revision-Date: 2018-06-04 19:48+0000\n"
 "Last-Translator: wallber azevedo pinheiro <wallpinheiro@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) <https://translate.pretix.eu/projects/"
@@ -299,15 +299,25 @@ msgid "Waiting list"
 msgstr "Lista de espera"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
+#, fuzzy
+#| msgctxt "widget"
+#| msgid ""
+#| "You currently have an active cart for this event. If you select more "
+#| "products, they will be added to your existing cart. Click on this message "
+#| "to continue checkout with your cart."
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
-"products, they will be added to your existing cart. Click on this message to "
-"continue checkout with your cart."
+"products, they will be added to your existing cart."
 msgstr ""
 "Você atualmente possui um carrinho ativo para este evento. Se você "
 "selecionar mais produtos, eles serão adicionados ao seu carrinho existente. "
 "Clique nesta mensagem para finalizar a compra do seu carrinho."
+
+#: pretix/static/pretixpresale/js/widget/widget.js:25
+msgctxt "widget"
+msgid "Resume checkout"
+msgstr ""
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
