Translated on translate.pretix.eu (German)
Currently translated at 100.0% (64 of 64 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-11 08:14+0000\n"
-"PO-Revision-Date: 2018-08-07 13:48+0000\n"
+"PO-Revision-Date: 2018-08-11 08:17+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German <https://translate.pretix.eu/projects/pretix/pretix-js/"
 "de/>\n"
@@ -302,26 +302,18 @@ msgid "Waiting list"
 msgstr "Warteliste"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
-#, fuzzy
-#| msgctxt "widget"
-#| msgid ""
-#| "You currently have an active cart for this event. If you select more "
-#| "products, they will be added to your existing cart. Click on this message "
-#| "to continue checkout with your cart."
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
 "products, they will be added to your existing cart."
 msgstr ""
 "Sie haben einen aktiven Warenkorb für diese Veranstaltung. Wenn Sie mehr "
-"Produkte auswählen, werden diese zu Ihrem Warenkorb hinzugefügt. Klicken Sie "
-"auf diese Meldung um den Kauf des bestehenden Warenkorbs fortzusetzen oder "
-"den Warenkorb zu verändern."
+"Produkte auswählen, werden diese zu Ihrem Warenkorb hinzugefügt."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:25
 msgctxt "widget"
 msgid "Resume checkout"
-msgstr ""
+msgstr "Kauf fortsetzen"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
