Translated on translate.pretix.eu (German (informal))
Currently translated at 100.0% (64 of 64 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/de_Informal/

powered by weblate

--- a/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-11 08:14+0000\n"
-"PO-Revision-Date: 2018-08-07 13:48+0000\n"
+"PO-Revision-Date: 2018-08-11 08:20+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German (informal) <https://translate.pretix.eu/projects/"
 "pretix/pretix-js/de_Informal/>\n"
@@ -302,26 +302,18 @@ msgid "Waiting list"
 msgstr "Warteliste"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
-#, fuzzy
-#| msgctxt "widget"
-#| msgid ""
-#| "You currently have an active cart for this event. If you select more "
-#| "products, they will be added to your existing cart. Click on this message "
-#| "to continue checkout with your cart."
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
 "products, they will be added to your existing cart."
 msgstr ""
 "Du hast einen aktiven Warenkorb für diese Veranstaltung. Wenn du mehr "
-"Produkte auswählst, werden diese zu deinem Warenkorb hinzugefügt. Klicke auf "
-"diese Meldung um den Kauf des bestehenden Warenkorbs fortzusetzen oder den "
-"Warenkorb zu verändern."
+"Produkte auswählst, werden diese zu deinem Warenkorb hinzugefügt."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:25
 msgctxt "widget"
 msgid "Resume checkout"
-msgstr ""
+msgstr "Kauf fortsetzen"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
