Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2712 of 2712 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-14 15:12+0000\n"
-"PO-Revision-Date: 2018-08-14 15:51+0000\n"
+"PO-Revision-Date: 2018-08-14 16:08+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German <https://translate.pretix.eu/projects/pretix/pretix/de/"
 ">\n"
@@ -3692,7 +3692,7 @@ msgstr ""
 "\n"
 "wir haben Ihre Bestellung für {event} erhalten. Da Sie ein Produkt bestellt "
 "haben,\n"
-"dass eine manuelle Freigabe vom Veranstalter erfordert, bitten wir Sie um "
+"das eine manuelle Freigabe vom Veranstalter erfordert, bitten wir Sie um "
 "etwas\n"
 "Geduld. Wir werden Sie per E-Mail über den Fortgang Ihrer Bestellung "
 "informieren.\n"
