--- a/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-14 15:13+0000\n"
-"PO-Revision-Date: 2018-07-18 22:00+0000\n"
+"PO-Revision-Date: 2018-08-17 09:03+0000\n"
 "Last-Translator: Yunus Fırat Pişkin <firat.piskin@idvlabs.com>\n"
-"Language-Team: Turkish <https://translate.pretix.eu/projects/pretix/pretix-"
-"js/tr/>\n"
+"Language-Team: Turkish <https://translate.pretix.eu/projects/pretix/"
+"pretix-js/tr/>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -150,7 +150,7 @@ msgstr "Barkod alanı"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:428
 msgid "Powered by pretix"
-msgstr ""
+msgstr "Pretix tarafından desteklenmektedir"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:430
 msgid "Object"
@@ -324,7 +324,7 @@ msgstr ""
 #: pretix/static/pretixpresale/js/widget/widget.js:25
 msgctxt "widget"
 msgid "Resume checkout"
-msgstr ""
+msgstr "Ödeme işlemine devam et"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
