--- a/src/pretix/locale/es/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/es/LC_MESSAGES/djangojs.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-14 15:13+0000\n"
-"PO-Revision-Date: 2018-05-31 02:00+0000\n"
-"Last-Translator: Lorenzo Peña <lorinkoz@nauta.cu>\n"
-"Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix-"
-"js/es/>\n"
+"PO-Revision-Date: 2018-08-25 07:22+0000\n"
+"Last-Translator: oocf <oswaldocerna@gmail.com>\n"
+"Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/"
+"pretix-js/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 2.19.1\n"
+"X-Generator: Weblate 3.1.1\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:56
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
@@ -127,11 +127,11 @@ msgstr "¡Presione Control+C para copiar!"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:43
 msgid "Lead Scan QR"
-msgstr ""
+msgstr "Escanear QR de clientes potenciales"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:45
 msgid "Check-in QR"
-msgstr ""
+msgstr "QR de registro"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:249
 msgid "The PDF background file could not be loaded for the following reason:"
@@ -152,7 +152,7 @@ msgstr "Área para código de barras"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:428
 msgid "Powered by pretix"
-msgstr ""
+msgstr "Proveído por pretix"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:430
 msgid "Object"
@@ -160,11 +160,11 @@ msgstr "Objeto"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:434
 msgid "Ticket design"
-msgstr "Diseño de tique"
+msgstr "Diseño de ticket"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:687
 msgid "Saving failed."
-msgstr "No ha sido posible guardar."
+msgstr "El guardado falló."
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:735
 msgid "Do you really want to leave the editor without saving your changes?"
@@ -198,7 +198,7 @@ msgstr "Ninguno"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:531
 msgid "Use a different name internally"
-msgstr ""
+msgstr "Usar un nombre diferente internamente"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
@@ -233,7 +233,7 @@ msgstr[1] ""
 #: pretix/static/pretixpresale/js/widget/widget.js:9
 msgctxt "widget"
 msgid "Sold out"
-msgstr "Vendido"
+msgstr "Agotado"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:10
 msgctxt "widget"
@@ -285,12 +285,12 @@ msgstr "cantidad mínima a ordenar: %s"
 #: pretix/static/pretixpresale/js/widget/widget.js:19
 msgctxt "widget"
 msgid "Close ticket shop"
-msgstr "Cerrar tienda de tiques"
+msgstr "Cerrar tienda de tickets"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:20
 msgctxt "widget"
 msgid "The ticket shop could not be loaded."
-msgstr "No se ha podido cargar la tienda de tiques."
+msgstr "No se ha podido cargar la tienda de tickets."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:21
 msgctxt "widget"
@@ -305,25 +305,18 @@ msgid "Waiting list"
 msgstr "Lista de espera"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
-#, fuzzy
-#| msgctxt "widget"
-#| msgid ""
-#| "You currently have an active cart for this event. If you select more "
-#| "products, they will be added to your existing cart. Click on this message "
-#| "to continue checkout with your cart."
 msgctxt "widget"
 msgid ""
 "You currently have an active cart for this event. If you select more "
 "products, they will be added to your existing cart."
 msgstr ""
 "Ya tiene un carrito de compras activo para este evento. Si selecciona más "
-"productos, estos serán añadidos al carrito actual. Haga clic en este mensaje "
-"para proceder al pago de su carrito."
+"productos, estos serán añadidos al carrito actual."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:25
 msgctxt "widget"
 msgid "Resume checkout"
-msgstr ""
+msgstr "Reanudar pago"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
@@ -331,8 +324,8 @@ msgid ""
 "<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">event "
 "ticketing powered by pretix</a>"
 msgstr ""
-"<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">tiques para "
-"eventos cortesía de pretix</a>"
+"<a href=\"https://pretix.eu\" target=\"_blank\" rel=\"noopener\">tickets "
+"para eventos cortesía de pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
