Translated on translate.pretix.eu (Spanish)
Currently translated at 100.0% (64 of 64 strings)

Translation: pretix/pretix (frontend)
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix-js/es/

powered by weblate

--- a/src/pretix/locale/es/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/es/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-14 15:13+0000\n"
-"PO-Revision-Date: 2018-08-25 07:22+0000\n"
+"PO-Revision-Date: 2018-08-25 16:00+0000\n"
 "Last-Translator: oocf <oswaldocerna@gmail.com>\n"
 "Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/"
 "pretix-js/es/>\n"
@@ -160,7 +160,7 @@ msgstr "Objeto"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:434
 msgid "Ticket design"
-msgstr "Diseño de ticket"
+msgstr "Diseño del ticket"
 
 #: pretix/static/pretixcontrol/js/ui/editor.js:687
 msgid "Saving failed."
